refactor: change default log handler; add parallelism config to downloader
- Set ConsoleLogHandler as the default log handler in code and config
- Make contract download parallelism configurable via downloader-thread-count (default 4)
- Track and log number of processed contracts in CanonicalDataDownloaderDecorator
- Add error logging for missing universe data
- Improve logging clarity and code readability

--- a/DownloaderDataProvider/config.example.json
+++ b/DownloaderDataProvider/config.example.json
@@ -1,7 +1,7 @@
 {
   "map-file-provider": "LocalDiskMapFileProvider",
   "data-provider": "DefaultDataProvider",
-  "log-handler": "CompositeLogHandler",
+  "log-handler": "ConsoleLogHandler",
   "factor-file-provider": "LocalDiskFactorFileProvider",
 
   // The root directory of the data folder for this application
